--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
 # ContaAzul OAuth Credentials
 CLIENT_ID=your_client_id_here
 CLIENT_SECRET=your_client_secret_here
-REDIRECT_URI=https://yourusername.pythonanywhere.com/callback
+REDIRECT_URI=https://your-app.onrender.com/callback
 
-# Flask Configuration
-FLASK_SECRET_KEY=generate_a_secure_random_key_here
+# ContaAzul API URLs
+AUTH_URL=https://api.contaazul.com/auth/authorize
+TOKEN_URL=https://api.contaazul.com/oauth2/token
+
+# API Access Credentials
+API_USERNAME=your_username_here
+API_PASSWORD=your_password_here
 
 # Data Storage
-DATA_OUTPUT_PATH=/home/yourusername/contaazul/data/private
+DATA_OUTPUT_PATH=/data/private
 
-# API Access (for reading data)
-API_USERNAME=your_api_username
-API_PASSWORD=your_secure_password
+# Flask Configuration
+FLASK_SECRET_KEY=generate_a_secure_key_here
