--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: contaazul-integration
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn index:app
+    startCommand: gunicorn -c gunicorn.conf.py app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.13.2
