added: nova api do conta azul integrada

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-# ContaAzul OAuth Credentials
+# ContaAzul OAuth Credentials (Old API)
 CLIENT_ID=your_client_id_here
 CLIENT_SECRET=your_client_secret_here
 REDIRECT_URI=https://your-app.onrender.com/callback
-
-# ContaAzul API URLs
 AUTH_URL=https://api.contaazul.com/auth/authorize
 TOKEN_URL=https://api.contaazul.com/oauth2/token
+
+# ContaAzul OAuth Credentials (New API)
+CLIENT_NEW_ID=your_new_client_id_here
+CLIENT_NEW_SECRET=your_new_client_secret_here
+REDIRECT_NEW_URI=https://your-app.onrender.com/callback-new
+AUTH_NEW_URL=https://api-v2.contaazul.com/oauth2/authorize
+TOKEN_NEW_URL=https://api-v2.contaazul.com/oauth2/token
 
 # API Access Credentials
 API_USERNAME=your_username_here
