--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,16 @@ API_PASSWORD=your_password_here
 # Data Storage
 DATA_OUTPUT_PATH=/data/private
 
+# MySQL Database (Token Persistence)
+MYSQL_HOST=193.203.175.56
+MYSQL_PORT=3306
+MYSQL_USER=u929783523_onefinance
+MYSQL_PASSWORD=OneFinance123@
+MYSQL_DB=u929783523_onefinance
+MYSQL_POOL_SIZE=5
+# (Opcional) MYSQL_SSL_CA=/path/to/ca.pem
+
 # Flask Configuration
 FLASK_SECRET_KEY=generate_a_secure_key_here
+
+# (Removido 'bota .'; use esta área para observações)
