--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,12 @@ API_PASSWORD=your_password_here
 DATA_OUTPUT_PATH=/data/private
 
 # MySQL Database (Token Persistence)
-MYSQL_HOST=193.203.175.56
-MYSQL_PORT=3306
-MYSQL_USER=u929783523_onefinance
+DB_HOST=193.203.175.56
+DB_PORT=3306
+DB_USER=u929783523_onefinance
 MYSQL_PASSWORD=OneFinance123@
-MYSQL_DB=u929783523_onefinance
+DB_PASSWORD=u929783523_onefinance
+DB_NAME=u929783523_onefinance
 MYSQL_POOL_SIZE=5
 # (Opcional) MYSQL_SSL_CA=/path/to/ca.pem
 
